@@ -1,3 +1,7 @@
+2015-11-04 John Wu <John dot Wu at ACM dot org>
+	* src/iapi.cpp: add documentation to clarify the operation of
+	fastbit_iapi_extend_array
+
 2015-10-30 John Wu <John dot Wu at ACM dot org>
 	* src/category.cpp: comment out the code block in
 	ibis::text::startPositions that fill .sp file when the data file
